generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
  output   = "./"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id       String   @id @default(cuid())
  name     String
  email    String   @unique
  password String
  role     UserRole @default(CUSTOMER)
  image    String   @default("/avatar.jpg")

  twoFactorSecret  String?
  twoFactorEnabled Boolean @default(false)

  failedLoginAttempts Int       @default(0)
  lastFailedLogin     DateTime?

  passwordResetToken  String?
  passwordResetSentAt DateTime?

  isEmailVerified         Boolean   @default(false)
  emailVerificationSentAt DateTime?
  emailVerificationToken  String?

  isPhoneVerified         Boolean   @default(false)
  phoneVerificationSentAt DateTime?
  phoneVerificationToken  String?

  isActive  Boolean @default(true)
  maxTokens Int     @default(5)

  isBlocked   Boolean   @default(false)
  blockedAt   DateTime?
  blockedById String?
  blockReason String?

  preferredLanguage String  @default("en")
  timezone          String? @default("UTC")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  restaurants         Restaurant[]
  permissionGroups    PermissionGroup[]     @relation("UserGroups")
  permissions         Permission[]          @relation("UserPermissions")
  UserPermissionGroup UserPermissionGroup[]
  AuditLog            AuditLog[]
  ErrorLog            ErrorLog[]
  Orders              Order[]
  loginAttempts       UserLoginAttempt[]
  tokens              UserToken[]
}

enum UserRole {
  ADMIN
  OWNER
  CUSTOMER
}

model UserToken {
  id        String   @id @default(cuid())
  userId    String
  token     String   @unique
  expiresAt DateTime

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user User @relation(fields: [userId], references: [id])
}

model UserLoginAttempt {
  id        String   @id @default(cuid())
  userId    String
  ipAddress String
  userAgent String
  success   Boolean
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id])
}

model Restaurant {
  id          String @id @default(cuid())
  name        String
  description String @default("")
  location    String
  ownerId     String
  image       String @default("/avatar.jpg")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  Category Category[]
  MenuItem MenuItem[]
  owner    User       @relation(fields: [ownerId], references: [id])
  orders   Order[]
}

model MenuItem {
  id           String  @id @default(cuid())
  name         String
  description  String  @default("")
  image        String  @default("/avatar.jpg")
  price        Decimal @db.Decimal(10, 2)
  available    Boolean @default(true)
  restaurantId String
  categoryId   String

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  category   Category    @relation(fields: [categoryId], references: [id])
  restaurant Restaurant  @relation(fields: [restaurantId], references: [id])
  orders     OrderItem[]
}

model Category {
  id           String @id @default(cuid())
  name         String
  restaurantId String
  image        String @default("/avatar.jpg")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  restaurant Restaurant @relation(fields: [restaurantId], references: [id])
  items      MenuItem[]
}

model Permission {
  id          String @id @default(cuid())
  key         String @unique
  description String @default("")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  groups            PermissionGroup[]   @relation("GroupPermissions")
  users             User[]              @relation("UserPermissions")
  PermissionInGroup PermissionInGroup[]
}

model PermissionGroup {
  id          String @id @default(cuid())
  name        String @unique
  description String @default("")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  permissions         Permission[]          @relation("GroupPermissions")
  users               User[]                @relation("UserGroups")
  PermissionInGroup   PermissionInGroup[]
  UserPermissionGroup UserPermissionGroup[]
}

// Pivot table for PermissionGroup <-> Permission (many-to-many)
model PermissionInGroup {
  id                String          @id @default(cuid())
  permissionGroup   PermissionGroup @relation(fields: [permissionGroupId], references: [id])
  permissionGroupId String
  permission        Permission      @relation(fields: [permissionId], references: [id])
  permissionId      String

  @@unique([permissionGroupId, permissionId])
}

// Pivot table for User <-> PermissionGroup (many-to-many)
model UserPermissionGroup {
  id                String          @id @default(cuid())
  user              User            @relation(fields: [userId], references: [id])
  userId            String
  permissionGroup   PermissionGroup @relation(fields: [permissionGroupId], references: [id])
  permissionGroupId String

  @@unique([userId, permissionGroupId])
}

model AuditLog {
  id         String          @id @default(uuid())
  actorId    String?
  actorType  LogActorType
  action     LogActionType
  resource   LogResourceType
  resourceId String?
  diff       Json?
  metadata   Json?
  createdAt  DateTime        @default(now())
  User       User?           @relation(fields: [actorId], references: [id])

  @@index([action])
  @@index([resource])
  @@index([createdAt])
  @@index([actorId])
  @@index([actorType])
}

model ErrorLog {
  id         String          @id @default(uuid())
  actorId    String?
  actorType  LogActorType
  resource   LogResourceType
  resourceId String?
  metadata   Json?
  createdAt  DateTime        @default(now())
  User       User?           @relation(fields: [actorId], references: [id])

  @@index([resource])
  @@index([createdAt])
  @@index([actorType])
  @@index([actorId])
}

model JobLog {
  id        String       @id @default(cuid())
  jobId     String
  jobName   String
  status    JobLogStatus
  data      Json
  result    Json?
  error     String?
  createdAt DateTime     @default(now())

  @@index([jobId])
  @@index([jobName])
  @@index([status])
  @@index([createdAt])
}

enum JobLogStatus {
  COMPLETED
  FAILED
}

enum LogActorType {
  ADMIN
  USER
  CRON_JOB
  WEBHOOK
  BOT
}

enum LogActionType {
  CREATE
  UPDATE
  DELETE

  RESET_PASSWORD
  SEND_RESET_PASSWORD_EMAIL
  VERIFY_RESET_PASSWORD_TOKEN

  SEND_VERIFICATION_EMAIL
  VERIFY_EMAIL_TOKEN

  LOGIN
  REGISTER
  USER_BLOCKED
  INVALID_LOGIN_ATTEMPT

  PLACE_ORDER
  CANCEL_ORDER

  EXPORT
  IMPORT
  UPLOAD

  REFRESH_TOKEN

  SYNC
  NOTIFY
}

enum LogResourceType {
  PERMISSION
  PERMISSION_GROUP
  CATEGORY
  MENU_ITEM
  USER
  RESTAURANT
  ORDER
}

model Order {
  id           String      @id @default(cuid())
  userId       String
  restaurantId String
  items        OrderItem[]
  status       OrderStatus @default(PENDING)
  total        Decimal     @db.Decimal(10, 2)
  subtotal     Decimal     @db.Decimal(10, 2)
  discount     Decimal     @default(0) @db.Decimal(10, 2)
  notes        String      @default("")

  paymentStatus PaymentStatus @default(UNPAID)
  paymentMethod PaymentMethod @default(CASH)

  tableNumber Int?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user       User       @relation(fields: [userId], references: [id])
  restaurant Restaurant @relation(fields: [restaurantId], references: [id])
}

model OrderItem {
  id         String @id @default(cuid())
  orderId    String
  menuItemId String
  quantity   Int
  notes      String @default("")

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  order    Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  menuItem MenuItem @relation(fields: [menuItemId], references: [id])
}

enum OrderStatus {
  PENDING
  PREPARING
  COMPLETED
  CANCELLED
}

enum PaymentStatus {
  UNPAID
  PAID
  REFUNDED
}

enum PaymentMethod {
  CASH
  CARD
  ONLINE
}
