//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  role UserRole [not null, default: 'CUSTOMER']
  image String [not null, default: '/avatar.jpg']
  twoFactorSecret String
  twoFactorEnabled Boolean [not null, default: false]
  failedLoginAttempts Int [not null, default: 0]
  lastFailedLogin DateTime
  passwordResetToken String
  passwordResetSentAt DateTime
  isEmailVerified Boolean [not null, default: false]
  emailVerificationSentAt DateTime
  emailVerificationToken String
  isPhoneVerified Boolean [not null, default: false]
  phoneVerificationSentAt DateTime
  phoneVerificationToken String
  isActive Boolean [not null, default: true]
  maxTokens Int [not null, default: 5]
  isBlocked Boolean [not null, default: false]
  blockedAt DateTime
  blockedById String
  blockReason String
  preferredLanguage String [not null, default: 'en']
  timezone String [default: 'UTC']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  restaurants Restaurant [not null]
  permissionGroups PermissionGroup [not null]
  permissions Permission [not null]
  UserPermissionGroup UserPermissionGroup [not null]
  AuditLog AuditLog [not null]
  ErrorLog ErrorLog [not null]
  Orders Order [not null]
  loginAttempts UserLoginAttempt [not null]
  tokens UserToken [not null]
}

Table UserToken {
  id String [pk]
  userId String [not null]
  token String [unique, not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
}

Table UserLoginAttempt {
  id String [pk]
  userId String [not null]
  ipAddress String [not null]
  userAgent String [not null]
  success Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  user User [not null]
}

Table Restaurant {
  id String [pk]
  name String [not null]
  description String [not null, default: '']
  location String [not null]
  ownerId String [not null]
  image String [not null, default: '/avatar.jpg']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Category Category [not null]
  MenuItem MenuItem [not null]
  owner User [not null]
  orders Order [not null]
}

Table MenuItem {
  id String [pk]
  name String [not null]
  description String [not null, default: '']
  image String [not null, default: '/avatar.jpg']
  price Decimal [not null]
  available Boolean [not null, default: true]
  restaurantId String [not null]
  categoryId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  category Category [not null]
  restaurant Restaurant [not null]
  orders OrderItem [not null]
}

Table Category {
  id String [pk]
  name String [not null]
  restaurantId String [not null]
  image String [not null, default: '/avatar.jpg']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  restaurant Restaurant [not null]
  items MenuItem [not null]
}

Table Permission {
  id String [pk]
  key String [unique, not null]
  description String [not null, default: '']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  groups PermissionGroup [not null]
  users User [not null]
  PermissionInGroup PermissionInGroup [not null]
}

Table PermissionGroup {
  id String [pk]
  name String [unique, not null]
  description String [not null, default: '']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  permissions Permission [not null]
  users User [not null]
  PermissionInGroup PermissionInGroup [not null]
  UserPermissionGroup UserPermissionGroup [not null]
}

Table PermissionInGroup {
  id String [pk]
  permissionGroup PermissionGroup [not null]
  permissionGroupId String [not null]
  permission Permission [not null]
  permissionId String [not null]

  indexes {
    (permissionGroupId, permissionId) [unique]
  }
}

Table UserPermissionGroup {
  id String [pk]
  user User [not null]
  userId String [not null]
  permissionGroup PermissionGroup [not null]
  permissionGroupId String [not null]

  indexes {
    (userId, permissionGroupId) [unique]
  }
}

Table AuditLog {
  id String [pk]
  actorId String
  actorType LogActorType [not null]
  action LogActionType [not null]
  resource LogResourceType [not null]
  resourceId String
  diff Json
  metadata Json
  createdAt DateTime [default: `now()`, not null]
  User User
}

Table ErrorLog {
  id String [pk]
  actorId String
  actorType LogActorType [not null]
  resource LogResourceType [not null]
  resourceId String
  metadata Json
  createdAt DateTime [default: `now()`, not null]
  User User
}

Table JobLog {
  id String [pk]
  jobId String [not null]
  jobName String [not null]
  status JobLogStatus [not null]
  data Json [not null]
  result Json
  error String
  createdAt DateTime [default: `now()`, not null]
}

Table Order {
  id String [pk]
  userId String [not null]
  restaurantId String [not null]
  items OrderItem [not null]
  status OrderStatus [not null, default: 'PENDING']
  total Decimal [not null]
  subtotal Decimal [not null]
  discount Decimal [not null, default: 0]
  notes String [not null, default: '']
  paymentStatus PaymentStatus [not null, default: 'UNPAID']
  paymentMethod PaymentMethod [not null, default: 'CASH']
  tableNumber Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  restaurant Restaurant [not null]
}

Table OrderItem {
  id String [pk]
  orderId String [not null]
  menuItemId String [not null]
  quantity Int [not null]
  notes String [not null, default: '']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  order Order [not null]
  menuItem MenuItem [not null]
}

Table UserGroups {
  permissiongroupsId String [ref: > PermissionGroup.id]
  usersId String [ref: > User.id]
}

Table UserPermissions {
  permissionsId String [ref: > Permission.id]
  usersId String [ref: > User.id]
}

Table GroupPermissions {
  groupsId String [ref: > PermissionGroup.id]
  permissionsId String [ref: > Permission.id]
}

Enum UserRole {
  ADMIN
  OWNER
  CUSTOMER
}

Enum JobLogStatus {
  COMPLETED
  FAILED
}

Enum LogActorType {
  ADMIN
  USER
  CRON_JOB
  WEBHOOK
  BOT
}

Enum LogActionType {
  CREATE
  UPDATE
  DELETE
  RESET_PASSWORD
  SEND_RESET_PASSWORD_EMAIL
  VERIFY_RESET_PASSWORD_TOKEN
  SEND_VERIFICATION_EMAIL
  VERIFY_EMAIL_TOKEN
  LOGIN
  REGISTER
  USER_BLOCKED
  INVALID_LOGIN_ATTEMPT
  PLACE_ORDER
  CANCEL_ORDER
  EXPORT
  IMPORT
  UPLOAD
  REFRESH_TOKEN
  SYNC
  NOTIFY
}

Enum LogResourceType {
  PERMISSION
  PERMISSION_GROUP
  CATEGORY
  MENU_ITEM
  USER
  RESTAURANT
  ORDER
}

Enum OrderStatus {
  PENDING
  PREPARING
  COMPLETED
  CANCELLED
}

Enum PaymentStatus {
  UNPAID
  PAID
  REFUNDED
}

Enum PaymentMethod {
  CASH
  CARD
  ONLINE
}

Ref: UserToken.userId > User.id

Ref: UserLoginAttempt.userId > User.id

Ref: Restaurant.ownerId > User.id

Ref: MenuItem.categoryId > Category.id

Ref: MenuItem.restaurantId > Restaurant.id

Ref: Category.restaurantId > Restaurant.id

Ref: PermissionInGroup.permissionGroupId > PermissionGroup.id

Ref: PermissionInGroup.permissionId > Permission.id

Ref: UserPermissionGroup.userId > User.id

Ref: UserPermissionGroup.permissionGroupId > PermissionGroup.id

Ref: AuditLog.actorId > User.id

Ref: ErrorLog.actorId > User.id

Ref: Order.userId > User.id

Ref: Order.restaurantId > Restaurant.id

Ref: OrderItem.orderId > Order.id [delete: Cascade]

Ref: OrderItem.menuItemId > MenuItem.id